--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@vtfk/pdf-splitter",
   "version": "1.0.0",
-  "description": "",
+  "description": "A pdf splitter based on node-pdftk",
   "main": "index.js",
   "scripts": {
     "test": "standard && jest",
