--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A pdf splitter based on node-pdftk",
   "main": "index.js",
   "scripts": {
-    "test": "standard && jest",
+    "test": "standard && jest --verbose",
     "runExample": "node example.js"
   },
   "repository": {
