--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -3,6 +3,7 @@ on:
   release:
     types: [published]
     branches: [main]
+  workflow_dispatch:
 jobs:
   build:
     name: Build, test and publish
@@ -11,7 +12,7 @@ jobs:
     - uses: actions/checkout@master
     - uses: actions/setup-node@v2
       with:
-        node-version: '14.x'
+        node-version: '20.x'
         registry-url: 'https://registry.npmjs.org'
     - run: npm install
     - run: npm test
