--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A pdf splitter based on node-pdftk",
   "main": "index.js",
   "scripts": {
-    "test": "standard && jest --verbose",
+    "test": "standard && node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
     "runExample": "node example.js"
   },
   "repository": {
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/vtfk/pdf-splitter#readme",
   "dependencies": {
-    "@vtfk/pdf-text-reader": "^1.0.4",
+    "@vtfk/pdf-text-reader": "^1.1.3",
     "bluebird": "^3.7.2",
     "dotenv": "^16.0.0",
     "node-pdftk": "^2.1.3"
@@ -40,7 +40,7 @@
     ]
   },
   "devDependencies": {
-    "jest": "27.5.1",
+    "jest": "^29.7.0",
     "standard": "16.0.4"
   }
 }
